fixed modal alignment issue

--- a/styles.css
+++ b/styles.css
@@ -48,28 +48,27 @@ body {
 
 /*===== Modal ========*/
 #primeModal {
-  display: none;
+  display: block;
   position: fixed;
-  width: 521px;
+  width: 508px;
   height: 200px;
-  top: 150px;
-  left: 225px;
+  margin-top: -100px;
+  margin-left: -254px;
+  top: 50%;
+  left: 50%;
   background-color: #ACACAC;
   z-index: 5;
   border-radius: 10px;
   /*border: 1px solid black;*/
 }
-
 #modalTxt {
   background-color: #415DE5;
-  /*position: relative;*/
   margin: auto;
   margin-top: 60px;
   padding: 2px;
   border: 1px solid black;
   height: 60px;
   width: 80%;
-  /*line-height: 200px;*/
   text-align: center;
   border-radius: 10px;
 }
